Port Meteor Client to Minecraft 26.1.1 and restore WidgetScreen rendering.
Update build/dependency versions and migration fixes for 26.1.1 API changes, and move widget rendering to GameRenderer's render stage so Meteor GUI is visible and interactive again.

Made-with: Cursor