@@ -11,27 +11,26 @@ import it.unimi.dsi.fastutil.longs.LongSortedSet;
 import meteordevelopment.meteorclient.mixin.*;
 import meteordevelopment.meteorclient.utils.player.PlayerUtils;
 import meteordevelopment.meteorclient.utils.render.color.Color;
-import net.minecraft.block.AbstractBlock;
-import net.minecraft.block.Block;
-import net.minecraft.block.BlockState;
-import net.minecraft.block.Blocks;
-import net.minecraft.block.entity.BlockEntity;
-import net.minecraft.client.network.PlayerListEntry;
-import net.minecraft.entity.Entity;
-import net.minecraft.entity.EntityType;
-import net.minecraft.entity.LivingEntity;
-import net.minecraft.entity.player.PlayerEntity;
-import net.minecraft.fluid.Fluid;
-import net.minecraft.fluid.Fluids;
-import net.minecraft.util.math.BlockPos;
-import net.minecraft.util.math.Box;
-import net.minecraft.util.math.ChunkSectionPos;
-import net.minecraft.util.math.Direction;
-import net.minecraft.world.GameMode;
-import net.minecraft.world.entity.EntityLookup;
-import net.minecraft.world.entity.EntityTrackingSection;
-import net.minecraft.world.entity.SectionedEntityCache;
-import net.minecraft.world.entity.SimpleEntityLookup;
+import net.minecraft.client.multiplayer.PlayerInfo;
+import net.minecraft.core.BlockPos;
+import net.minecraft.core.Direction;
+import net.minecraft.core.SectionPos;
+import net.minecraft.world.entity.Entity;
+import net.minecraft.world.entity.EntityType;
+import net.minecraft.world.entity.LivingEntity;
+import net.minecraft.world.entity.player.Player;
+import net.minecraft.world.level.GameType;
+import net.minecraft.world.level.block.Blocks;
+import net.minecraft.world.level.block.entity.BlockEntity;
+import net.minecraft.world.level.block.state.BlockBehaviour;
+import net.minecraft.world.level.block.state.BlockState;
+import net.minecraft.world.level.entity.EntitySection;
+import net.minecraft.world.level.entity.EntitySectionStorage;
+import net.minecraft.world.level.entity.LevelEntityGetter;
+import net.minecraft.world.level.entity.LevelEntityGetterAdapter;
+import net.minecraft.world.level.material.Fluid;
+import net.minecraft.world.level.material.Fluids;
+import net.minecraft.world.phys.AABB;
 
 import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.function.Predicate;
@@ -39,7 +38,7 @@ import java.util.function.Predicate;
 import static meteordevelopment.meteorclient.MeteorClient.mc;
 
 public class EntityUtils {
-    private static final BlockPos.Mutable testPos = new BlockPos.Mutable();
+    private static final BlockPos.MutableBlockPos testPos = new BlockPos.MutableBlockPos();
 
     private EntityUtils() {
     }
@@ -90,32 +89,32 @@ public class EntityUtils {
         return target.getHealth() + target.getAbsorptionAmount();
     }
 
-    public static int getPing(PlayerEntity player) {
-        if (mc.getNetworkHandler() == null) return 0;
+    public static int getPing(Player player) {
+        if (mc.getConnection() == null) return 0;
 
-        PlayerListEntry playerListEntry = mc.getNetworkHandler().getPlayerListEntry(player.getUuid());
+        PlayerInfo playerListEntry = mc.getConnection().getPlayerInfo(player.getUUID());
         if (playerListEntry == null) return 0;
         return playerListEntry.getLatency();
     }
 
-    public static GameMode getGameMode(PlayerEntity player) {
+    public static GameType getGameMode(Player player) {
         if (player == null) return null;
-        PlayerListEntry playerListEntry = mc.getNetworkHandler().getPlayerListEntry(player.getUuid());
+        PlayerInfo playerListEntry = mc.getConnection().getPlayerInfo(player.getUUID());
         if (playerListEntry == null) return null;
         return playerListEntry.getGameMode();
     }
 
     @SuppressWarnings("deprecation") // Use of AbstractBlock.AbstractBlockState#blocksMovement
     public static boolean isAboveWater(Entity entity) {
-        BlockPos.Mutable blockPos = entity.getBlockPos().mutableCopy();
-        int bottom = mc.world.getBottomY();
+        BlockPos.MutableBlockPos blockPos = entity.blockPosition().mutable();
+        int bottom = mc.level.getMinY();
 
         while (blockPos.getY() > bottom) {
-            BlockState state = mc.world.getBlockState(blockPos);
+            BlockState state = mc.level.getBlockState(blockPos);
 
-            if (state.blocksMovement()) break;
+            if (state.blocksMotion()) break;
 
-            Fluid fluid = state.getFluidState().getFluid();
+            Fluid fluid = state.getFluidState().getType();
             if (fluid == Fluids.WATER || fluid == Fluids.FLOWING_WATER) {
                 return true;
             }
@@ -127,7 +126,7 @@ public class EntityUtils {
     }
 
     public static boolean isInCobweb(Entity entity) {
-        return mc.world.getStatesInBoxIfLoaded(entity.getBoundingBox()).anyMatch(state -> state.isOf(Blocks.COBWEB));
+        return mc.level.getBlockStatesIfLoaded(entity.getBoundingBox()).anyMatch(state -> state.is(Blocks.COBWEB));
     }
 
     public static boolean isInRenderDistance(Entity entity) {
@@ -137,7 +136,7 @@ public class EntityUtils {
 
     public static boolean isInRenderDistance(BlockEntity entity) {
         if (entity == null) return false;
-        return isInRenderDistance(entity.getPos().getX(), entity.getPos().getZ());
+        return isInRenderDistance(entity.getBlockPos().getX(), entity.getBlockPos().getZ());
     }
 
     public static boolean isInRenderDistance(BlockPos pos) {
@@ -146,23 +145,23 @@ public class EntityUtils {
     }
 
     public static boolean isInRenderDistance(double posX, double posZ) {
-        double x = Math.abs(mc.gameRenderer.getCamera().getCameraPos().x - posX);
-        double z = Math.abs(mc.gameRenderer.getCamera().getCameraPos().z - posZ);
-        double d = (mc.options.getViewDistance().getValue() + 1) * 16;
+        double x = Math.abs(mc.gameRenderer.getMainCamera().position().x - posX);
+        double z = Math.abs(mc.gameRenderer.getMainCamera().position().z - posZ);
+        double d = (mc.options.renderDistance().get() + 1) * 16;
 
         return x < d && z < d;
     }
 
-    public static BlockPos getCityBlock(PlayerEntity player) {
+    public static BlockPos getCityBlock(Player player) {
         if (player == null) return null;
 
         double bestDistanceSquared = 6 * 6;
         Direction bestDirection = null;
 
         for (Direction direction : DirectionAccessor.meteor$getHorizontal()) {
-            testPos.set(player.getBlockPos().offset(direction));
+            testPos.set(player.blockPosition().relative(direction));
 
-            Block block = mc.world.getBlockState(testPos).getBlock();
+            BlockBehaviour block = mc.level.getBlockState(testPos).getBlock();
             if (block != Blocks.OBSIDIAN && block != Blocks.NETHERITE_BLOCK && block != Blocks.CRYING_OBSIDIAN
                 && block != Blocks.RESPAWN_ANCHOR && block != Blocks.ANCIENT_DEBRIS) continue;
 
@@ -174,13 +173,13 @@ public class EntityUtils {
         }
 
         if (bestDirection == null) return null;
-        return player.getBlockPos().offset(bestDirection);
+        return player.blockPosition().relative(bestDirection);
     }
 
     public static String getName(Entity entity) {
         if (entity == null) return null;
-        if (entity instanceof PlayerEntity) return entity.getName().getString();
-        return entity.getType().getName().getString();
+        if (entity instanceof Player) return entity.getName().getString();
+        return entity.getType().getDescription().getString();
     }
 
     public static Color getColorFromDistance(Entity entity) {
@@ -223,7 +222,7 @@ public class EntityUtils {
 
         double percent = health / maxHealth;
 
-        percent = Math.max(0.0, Math.min(1.0, percent));
+        percent = Math.clamp(percent, 0.0, 1.0);
 
         int r, g;
 
@@ -240,37 +239,37 @@ public class EntityUtils {
         return new Color(r, g, 0, 255);
     }
 
-    public static boolean intersectsWithEntity(Box box, Predicate<Entity> predicate) {
-        EntityLookup<Entity> entityLookup = ((WorldAccessor) mc.world).meteor$getEntityLookup();
+    public static boolean intersectsWithEntity(AABB box, Predicate<Entity> predicate) {
+        LevelEntityGetter<Entity> entityLookup = ((LevelAccessor) mc.level).meteor$getEntityLookup();
 
         // Fast implementation using SimpleEntityLookup that returns on the first intersecting entity
-        if (entityLookup instanceof SimpleEntityLookup<Entity> simpleEntityLookup) {
-            SectionedEntityCache<Entity> cache = ((SimpleEntityLookupAccessor) simpleEntityLookup).meteor$getCache();
-            LongSortedSet trackedPositions = ((SectionedEntityCacheAccessor) cache).meteor$getTrackedPositions();
-            Long2ObjectMap<EntityTrackingSection<Entity>> trackingSections = ((SectionedEntityCacheAccessor) cache).meteor$getTrackingSections();
+        if (entityLookup instanceof LevelEntityGetterAdapter<Entity> simpleEntityLookup) {
+            EntitySectionStorage<Entity> cache = ((LevelEntityGetterAdapterAccessor) simpleEntityLookup).meteor$getSectionStorage();
+            LongSortedSet trackedPositions = ((EntitySectionStorageAccessor) cache).meteor$getSectionIds();
+            Long2ObjectMap<EntitySection<Entity>> trackingSections = ((EntitySectionStorageAccessor) cache).meteor$getSections();
 
-            int i = ChunkSectionPos.getSectionCoord(box.minX - 2);
-            int j = ChunkSectionPos.getSectionCoord(box.minY - 2);
-            int k = ChunkSectionPos.getSectionCoord(box.minZ - 2);
-            int l = ChunkSectionPos.getSectionCoord(box.maxX + 2);
-            int m = ChunkSectionPos.getSectionCoord(box.maxY + 2);
-            int n = ChunkSectionPos.getSectionCoord(box.maxZ + 2);
+            int i = SectionPos.posToSectionCoord(box.minX - 2);
+            int j = SectionPos.posToSectionCoord(box.minY - 2);
+            int k = SectionPos.posToSectionCoord(box.minZ - 2);
+            int l = SectionPos.posToSectionCoord(box.maxX + 2);
+            int m = SectionPos.posToSectionCoord(box.maxY + 2);
+            int n = SectionPos.posToSectionCoord(box.maxZ + 2);
 
             for (int o = i; o <= l; o++) {
-                long p = ChunkSectionPos.asLong(o, 0, 0);
-                long q = ChunkSectionPos.asLong(o, -1, -1);
+                long p = SectionPos.asLong(o, 0, 0);
+                long q = SectionPos.asLong(o, -1, -1);
                 LongBidirectionalIterator longIterator = trackedPositions.subSet(p, q + 1).iterator();
 
                 while (longIterator.hasNext()) {
                     long r = longIterator.nextLong();
-                    int s = ChunkSectionPos.unpackY(r);
-                    int t = ChunkSectionPos.unpackZ(r);
+                    int s = SectionPos.y(r);
+                    int t = SectionPos.z(r);
 
                     if (s >= j && s <= m && t >= k && t <= n) {
-                        EntityTrackingSection<Entity> entityTrackingSection = trackingSections.get(r);
+                        EntitySection<Entity> entityTrackingSection = trackingSections.get(r);
 
-                        if (entityTrackingSection != null && entityTrackingSection.getStatus().shouldTrack()) {
-                            for (Entity entity : ((EntityTrackingSectionAccessor) entityTrackingSection).<Entity>meteor$getCollection()) {
+                        if (entityTrackingSection != null && entityTrackingSection.getStatus().isAccessible()) {
+                            for (Entity entity : ((EntitySectionAccessor) entityTrackingSection).<Entity>meteor$getStorage()) {
                                 if (entity.getBoundingBox().intersects(box) && predicate.test(entity)) return true;
                             }
                         }
@@ -284,7 +283,7 @@ public class EntityUtils {
         // Slow implementation that loops every entity if for some reason the EntityLookup implementation is changed
         AtomicBoolean found = new AtomicBoolean(false);
 
-        entityLookup.forEachIntersects(box, entity -> {
+        entityLookup.get(box, entity -> {
             if (!found.get() && predicate.test(entity)) found.set(true);
         });
 
@@ -297,6 +296,6 @@ public class EntityUtils {
 
     // Copied from ServerPlayNetworkHandler#isEntityOnAir
     public static boolean isOnAir(Entity entity) {
-        return entity.getEntityWorld().getStatesInBox(entity.getBoundingBox().expand(0.0625).stretch(0.0, -0.55, 0.0)).allMatch(AbstractBlock.AbstractBlockState::isAir);
+        return entity.level().getBlockStates(entity.getBoundingBox().inflate(0.0625).expandTowards(0.0, -0.55, 0.0)).allMatch(BlockBehaviour.BlockStateBase::isAir);
     }
 }
